# rock-rms-mcp

./: prd.json  pyproject.toml  setup-for-user.sh
scripts/ralph/: progress.txt  ralph.sh
src/rock_rms_mcp/: __main__.py  client.py  server.py
tasks/: prd-rock-rms-mcp.md
